--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 :root{
     --cor-de-fundo:#2244FF;
-    --verde:
+    --verde: #6FFF57;
+    --branco: #FFFFFF;
+    --botao-ativo: #3A375A;
+    --botao-inativo: rgba(58,55,94,0.5);
+    --texto-fundo: rgba(58,55,94,0.3);
 }
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap')
+</style>
