--- a/style.css
+++ b/style.css
@@ -6,6 +6,37 @@
     --botao-inativo: rgba(58,55,94,0.5);
     --texto-fundo: rgba(58,55,94,0.3);
 }
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap')
-</style>
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+body{
+background-color: var(--cor-de-fundo); 
+color: var(--branco);
+font-family: 'Chakra Petch', sans-serif;
+}
+.conteudo-principal{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+.tiulo-principal{
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+.tiulo-principal span{
+    color: var(--verde);
+}
+.botao{
+    font-family: 'Chakra Petch',sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items:center;
+    width: 100%;
+}
