--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-de-fundo:#2244FF;
+    --cor-de-fundo:#060606;
     --verde: #6FFF57;
     --branco: #FFFFFF;
     --botao-ativo: #3A375A;
