--- a/style.css
+++ b/style.css
@@ -39,4 +39,22 @@ font-family: 'Chakra Petch', sans-serif;
     font-size: 18px;
     align-items:center;
     width: 100%;
+    border-bottom: 4px solid  var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+.botoes{
+    display: block;
+}
+@media and (:-min-window: 768px) {
+    .botoes{
+        display: flex;
+    }
+}
+.botao:last-child{
+    border-radius: 0 40px 0 0;
+}
+.botao:last-child{
+    border-radius: 0 40px 0 0;
 }
